# KINDY-MATE

./: .env.example  .gitignore  .lintstagedrc  AGENTS,md  AGENTSBUILD.md  DEPLOYMENT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/apps/activity_logger/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/activity_logger/migrations/: 0001_initial.py  0002_activity_alerts_entertainment.py  0003_parentoverridelog.py  0004_usage_screen_time_choice.py
backend/apps/authentication/: serializers.py  urls.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py  0002_user_consent.py  0003_user_avatar.py  0004_user_parent_pin.py
backend/apps/authentication/models/: user.py
backend/apps/gamification/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/gamification/migrations/: 0001_initial.py  0002_rewarditem_mascot.py  0003_rewarditem_display_category.py
backend/apps/learning/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/learning/migrations/: 0001_initial.py  0002_content_mission_metadata.py  0003_contentitem_display_category_and_more.py
backend/apps/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/profiles/migrations/: 0001_initial.py  0002_professional_fields.py  0003_childprofile_favorite_subjects.py
backend/config/: __init__.py  celery.py  urls.py
backend/config/settings/: __init__.py  base.py  development.py  production.py
(+69 files in other folders)
