[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "django>=5.1.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "pytest-django>=4.12.0",
    "ruff>=0.15.13",
]
